--- a/src/app/certificate/certificate.component.html
+++ b/src/app/certificate/certificate.component.html
@@ -1,3 +1,8 @@
-<p>
-  certificate works!
-</p>
+
+<form>
+  <div class="form-group">
+    <label>PALABRA : </label>
+    <input type="text" class="form-control" id="text_certificate"  placeholder="certificate">
+  </div>
+  <button type="submit" class="btn btn-primary">ENCRIPTAR</button>
+</form>
